fix: 🐛 modifying dark mode

--- a/apps/rose/src/app/features/pages/orders/orders.component.scss
+++ b/apps/rose/src/app/features/pages/orders/orders.component.scss
@@ -57,6 +57,7 @@
   align-items: center;
   padding: 1rem;
   border-bottom: 1px solid #E4E4E7;
+  color: var(--order-total-color)
   
 }
 
@@ -150,9 +151,9 @@
   height: 100px; 
   background: linear-gradient(
     to bottom, 
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.7) 50%,
-    rgba(255, 255, 255, 0.95) 100%
+    rgba(var(--fade-mask-base), 0) 0%,
+    rgba(var(--fade-mask-base), 0.7) 50%,
+    rgba(var(--fade-mask-base), 0.95) 100%
   );
   pointer-events: none;
 }
